--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en-US">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>"Невинный" - магазин вина</title>
+  <title>"Velvet" - Wine Store</title>
 </head>
 <body>
   <div id="root"></div>
 </body>
+  <footer> Developed by Manuel Dinis Júnior</footer>
 </html>
